deployment/01-deployment-ocp/yaml/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wealthcare-ns
  labels:
    app: wealthcare-application
