deployment/01-deployment-ocp/yaml/24-deployable-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wealthcare-notification
  namespace: wealthcare-ns
  labels:
    app: wealthcare-application
    subname: notification
spec:
  selector:
    matchLabels:
      app: wealthcare-application
      subname: notification
  replicas: 1
  template:
    metadata:
      labels:
        app: wealthcare-application
        subname: notification
    spec:
      containers:
        - name: container-notification
          image: "gandhicloudlab/wealthcare-notification-ocp-oss:0.0.1"
          imagePullPolicy: Always
          ports:
            - name: my-http
              containerPort: 9094
              protocol: TCP
            - name: https
              containerPort: 8082
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m" 
---
apiVersion: v1
kind: Service
metadata:
  name: wealthcare-notification
  namespace: wealthcare-ns
  labels:
    app: wealthcare-application
    subname: notification
spec:
  type: LoadBalancer
  ports:
    - name: my-http
      port: 9090
      targetPort: 9094
      protocol: TCP
  selector:
    app: wealthcare-application
    subname: notification
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wealthcare-notification
  namespace: wealthcare-ns
  labels:
    app: wealthcare-application
    subname: notification
spec:
  path: /
  to:
    kind: Service
    name: wealthcare-notification
    weight: 100
  port:
    targetPort: my-http
